[tool.poetry]
name = "classy-csv"
version = "0.1.1"
description = "The easiest way to parse your CSV files"
authors = ["GCBallesteros <dev+github@maxwellrules.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/GCBallesteros/Classy-CSV"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
